--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,27 @@
+amqp==2.5.2
+anyjson==0.3.3
+billiard==3.6.1.0
+celery==4.3.0
 certifi==2019.9.11
 chardet==3.0.4
 Django==2.2.7
+django-celery==3.3.1
+django-celery-beat==1.5.0
+django-kombu==0.9.4
+django-timezone-field==3.1
 djangorestframework==3.10.3
 idna==2.8
+importlib-metadata==0.23
+kombu==4.6.6
+kombu-sqlalchemy==1.1.0
+more-itertools==7.2.0
+python-crontab==2.4.0
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
+six==1.13.0
+SQLAlchemy==1.3.11
 sqlparse==0.3.0
 urllib3==1.25.7
+vine==1.3.0
+zipp==0.6.0
