--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,27 @@ chardet==3.0.4
 Django==2.2.7
 django-celery==3.3.1
 django-celery-beat==1.5.0
+django-environ==0.4.5
 django-kombu==0.9.4
 django-timezone-field==3.1
 djangorestframework==3.10.3
+gunicorn==20.0.3
+honcho==1.0.1
 idna==2.8
 importlib-metadata==0.23
 kombu==4.6.6
 kombu-sqlalchemy==1.1.0
 more-itertools==7.2.0
+psycopg2-binary==2.8.4
 python-crontab==2.4.0
 python-dateutil==2.8.1
 pytz==2019.3
+redis==3.3.11
 requests==2.22.0
 six==1.13.0
 SQLAlchemy==1.3.11
 sqlparse==0.3.0
 urllib3==1.25.7
 vine==1.3.0
+whitenoise==4.1.4
 zipp==0.6.0
